# ProjetQ

./: README.md  docker-compose.yml
frontend/: Dockerfile
frontend/app/: package.json  server.js
frontend/app/server/: config.js
frontend/app/server/routes/: api.js
frontend/app/src/: index.html
frontend/app/src/app/: app.component.html  app.module.ts
frontend/app/src/app/search-component/: search-component.component.html  search-component.component.spec.ts  search-component.component.ts
frontend/app/src/app/search-result-list-component/: search-result-list-component.component.html  search-result-list-component.component.spec.ts  search-result-list-component.component.ts
frontend/app/src/app/shared/: search-result.ts  search.service.ts
hamming-index/: Dockerfile  README.md
hamming-index/src/: CMakeLists.txt  DAOImage.cpp  DAOImage.h  DctPerceptualHash.cpp  DctPerceptualHash.h  Hamming.h  HammingIndexApplication.cpp  HammingIndexApplication.h  HammingIndexController.cpp  HammingIndexController.h  HashStore.cpp  HashStore.h  HashingController.cpp  HashingController.h  Image.h  ImageDownloader.cpp  ImageDownloader.h  main.cpp
nginx/: nginx.conf
seed/: Dockerfile  README.md  init.json  seed.sh
